# easy-sql

./: .gitignore  Cargo.toml  README.docify.md  README.md  README.structure.md  build.rs  easy_sql.ron  test-all.sh  test-full.sh  test-specific.sh
-main/: .env.example  Cargo.toml  README.docify.md  README.md  build.rs  easy_sql.ron
-main/src/: lib.rs  macro_support.rs
-main/src/database_structs/: connection.rs  easy_sql_tables.rs  mod.rs  transaction.rs
-main/src/drivers/: mod.rs
-main/src/drivers/postgres/: alter_table.rs  connection.rs  database.rs  mod.rs  table_exists.rs  to_convert_impl.rs
-main/src/drivers/sqlite/: alter_table.rs  connection.rs  database.rs  mod.rs  to_convert_impl.rs  to_default_impl.rs
-main/src/markers/driver/: functions.rs  mod.rs  operators.rs
-main/src/tests/general/: async_tokio.rs  mod.rs
-main/src/tests/general/documentation/: custom_sql_function_macro.rs  impl_supports_fn_macro.rs  insert_macro.rs  mini_demo.rs  mod.rs  output_macro.rs  query_lazy_macro.rs  query_macro.rs  table_join_macro.rs  update_macro.rs
-main/src/tests/general/impl_macros/: mod.rs  output.rs  query.rs  query_lazy.rs  table.rs
-main/src/tests/general/macros/: custom_select.rs  custom_select_compile_fail.rs  custom_sql_functions.rs  generic_easy_executor_argument_test.rs  mod.rs  order_by_container_test.rs  order_by_output_columns_test.rs  output_columns_comprehensive_test.rs  output_columns_in_custom_select_test.rs  pool_argument_test.rs  query_lazy_macro.rs  query_macro.rs  sql_case_insensitive_functions.rs  sql_expressions.rs  sql_functions.rs  table_join.rs
-main/src/tests/general/migrations/: mod.rs
-main/src/traits/: driver.rs  easy_executor.rs  output.rs  update.rs
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md
THE PLAN/: .txt
THE PLAN/Parser/: .txt  Plan.txt  problems.txt
compilation-data/: Cargo.toml  README.md
compilation-data/src/: data.rs  lib.rs
macros/: Cargo.toml  README.md  build.rs
macros/src/: lib.rs
macros/src/derive/: database_setup.rs  insert.rs  mod.rs  output.rs  table.rs  update.rs
macros/src/derive_components/: mod.rs  supported_drivers.rs  ty_to_variant.rs  validate_sql_attribute_keys.rs
macros/src/macros/: define_supports_operator_trait.rs  mod.rs  query.rs  query_lazy.rs  table_join.rs
macros/src/macros_components/: clauses.rs  collected_data.rs  column.rs  expr.rs  expr_parse.rs  limit.rs  mod.rs  operator.rs  provided_drivers.rs  query_generators.rs  query_type.rs  set.rs  value.rs
macros/tests/: ui_sql_unknown_attr_keys.rs
macros/tests/ui/: unknown_sql_database_setup_field_key.rs  unknown_sql_database_setup_field_key.stderr  unknown_sql_database_setup_struct_key.rs  unknown_sql_database_setup_struct_key.stderr  unknown_sql_field_key.rs  unknown_sql_field_key.stderr  unknown_sql_insert_multiple_unknown_keys.rs  unknown_sql_insert_multiple_unknown_keys.stderr  unknown_sql_output_field_key.rs  unknown_sql_output_field_key.stderr  unknown_sql_output_struct_key.rs  unknown_sql_output_struct_key.stderr  unknown_sql_struct_key.rs  unknown_sql_struct_key.stderr  unknown_sql_table_field_key.rs  unknown_sql_table_field_key.stderr  unknown_sql_table_struct_key.rs  unknown_sql_table_struct_key.stderr  unknown_sql_table_struct_key_name.rs  unknown_sql_table_struct_key_name.stderr  unknown_sql_table_struct_key_table.rs  unknown_sql_table_struct_key_table.stderr  unknown_sql_update_field_key.rs  unknown_sql_update_field_key.stderr  unknown_sql_update_struct_key.rs  unknown_sql_update_struct_key.stderr
scripts/: PR.sh  build_readme_docs.sh  publish.sh  readme_join.sh  switch_to_local_deps.sh  switch_to_version_deps.sh  test-all.sh  test-full.sh  test-specific.sh
scripts/readme_join_helpers/: .gitignore  Readme_Start.md  trim_readme_start.rs
sql-build/: Cargo.toml
sql-build/src/: lib.rs
sql-compilation-data/: Cargo.toml
sql-compilation-data/src/: data.rs  lib.rs  sql_type.rs
sql-macros/: Cargo.toml  build.rs
sql-macros/src/: lib.rs  sql.rs  sql_column.rs  sql_convenience_attr.rs  sql_function.rs  sql_keyword.rs  sql_limit.rs  sql_next_clause.rs  sql_order_by.rs  sql_where.rs
sql-macros/src/derive/: database_setup.rs  insert.rs  mod.rs  output.rs  table.rs  update.rs
sql-macros/src/macros/: define_supports_fn_trait.rs  impl_supports_fn.rs  mod.rs  query.rs  query_lazy.rs  sql.rs  table_join.rs
sql-macros/src/macros_components/: builtin_functions.rs  clauses.rs  collected_data.rs  column.rs  expr.rs  keyword.rs  limit.rs  mod.rs  next_clause.rs  order_by.rs  provided_drivers.rs  query_generators.rs  set.rs
sql-macros/src/query_macro_components/: clauses.rs  mod.rs  provided_drivers.rs  query_generators.rs  query_type.rs
sql-macros/src/sql/: mod.rs
sql-macros/src/sql_derive/: database_setup.rs  mod.rs  sql_insert.rs  sql_output.rs  sql_table.rs  sql_update.rs
sql-macros/src/sql_macros/: mod.rs  sql.rs  sql_set.rs  sql_where.rs  table_join.rs
sql-macros/src/sql_macros_components/: joined_field.rs  mod.rs  sql_column.rs  sql_expr.rs  sql_keyword.rs  sql_limit.rs  sql_next_clause.rs  sql_order_by.rs  sql_set.rs  sql_where.rs
src/: database.rs  database_setup.rs  easy_executor.rs  easy_sql_tables.rs  example.rs  example_all.rs  lib.rs  macro_support.rs  never.rs  supported.rs
src/database_structs/: alter_table.rs  connection.rs  database.rs  easy_sql_tables.rs  mod.rs  table_field.rs  transaction.rs
src/drivers/: general_value.rs  mod.rs
src/markers/: driver.rs  mod.rs  query.rs
src/query/: column.rs  mod.rs  sql.rs
src/sql_query/: clauses.rs  column.rs  mod.rs  setup_sql.rs  sql.rs  sql_type.rs  sql_value.rs  table_field.rs
src/tests/: _logger.rs  delete.rs  how_to_sqlx.rs  impl_database_setup.rs  impl_sql_insert.rs  impl_sql_output.rs  impl_sql_update.rs  impl_table.rs  insert.rs  mod.rs  query_macro.rs  readme.rs  select.rs  sql_macro_modes.rs  syntax.rs  syntax2.rs  update.rs
src/traits/: database_internal.rs  database_setup.rs  driver.rs  easy_executor.rs  has_table.rs  has_table_traits.rs  insert.rs  mod.rs  output.rs  select_type.rs  table.rs  (+6 more)
(+83 files in other folders)
