[package]
edition = "2024" 
name = "easy-sql" 
version = "0.9.0" # Table Join and Exists is required for 1.0.0

[dependencies]
sqlx = {version = "0.8", features = [
  "runtime-tokio",
  "uuid",
  "sqlite",
  "postgres",
  "bigdecimal",
  "rust_decimal",
  "chrono",
]}
uuid = {version = "*", features = ["serde"]}
# Add serde impl to bigdecimal
bigdecimal = {version = "*", features = ["serde-json"]}
# Add serde impl to decimal
rust_decimal = {version = "1.37.1", features = ["serde-str"]}

# Used in SqlTable derive macro (and tests)
lazy_static = "*"

easy-macros = {path = "../easy-macros", features = ["general"]}

anyhow = "1"
chrono = {version = "*", features = ["serde"]}

bincode = {version = "2", features = ["serde"]}
serde = {version = "1", features = ["derive"]}

async-trait = "0.1.88"
futures = "0.3.31"
futures-core = "0.3.31"
pin-project = "1"
tokio = {version = "1", features = ["sync"]}

sql-build = {path = "./sql-build", optional = true}
sql-compilation-data = {path = "./sql-compilation-data", default-features = false}
sql-macros = {path = "./sql-macros"}

[dev-dependencies]
tokio = {version = "1", features = ["full"]} 

[build-dependencies]
easy-macros = {path = "../easy-macros", features = ["build"]}
sql-build = {path = "./sql-build"}
regex="*"

[features]
backend = ["sqlx/postgres"]
frontend = ["sqlx/sqlite"]
