[package]
edition = "2024" 
name = "easy-sql" 
version = "0.9.0" # Table Join and Exists is required for 1.0.0
license = "Apache-2.0"

[dependencies]
sqlx = {version = "0.8", features = [
  "runtime-tokio",
  "uuid",
  "sqlite",
  "postgres",
  "bigdecimal",
  "rust_decimal",
  "chrono",
], optional = true}
uuid = {version = "*", features = ["serde"], optional = true}
# Add serde impl to bigdecimal
bigdecimal = {version = "*", features = ["serde-json"], optional = true}
# Add serde impl to decimal
rust_decimal = {version = "1.37.1", features = ["serde-str"], optional = true}

# Used in SqlTable derive macro (and tests)
lazy_static = {version="*", optional = true}

easy-macros = {path = "../easy-macros", features = ["general"], optional = true}

anyhow = {version="1",optional = true}
chrono = {version = "*", features = ["serde"], optional = true}

bincode = {version = "2", features = ["serde"], optional = true}
serde = {version = "1", features = ["derive"], optional = true}

async-trait = {version="0.1.88", optional = true}
futures = {version="0.3.31", optional = true}
futures-core = {version="0.3.31", optional = true}
pin-project = {version="1", optional = true}
tokio = {version = "1", features = ["sync"], optional = true}

sql-build = {path = "./sql-build", optional = true}
sql-compilation-data = {path = "./sql-compilation-data", default-features = false, optional = true}
sql-macros = {path = "./sql-macros", optional = true}


[dev-dependencies]
tokio = {version = "1", features = ["full"]} 

[build-dependencies]
easy-macros = {path = "../easy-macros", features = ["build"]}
sql-build = {path = "./sql-build"}
regex="*"

[features]
default= []
not_build = [
  "dep:sqlx",
"dep:uuid",
  "dep:bigdecimal",
"dep:rust_decimal",
"dep:lazy_static",
"dep:easy-macros",
"dep:anyhow",
"dep:chrono",
"dep:bincode",
"dep:serde",
"dep:async-trait",
"dep:futures",
"dep:futures-core",
"dep:pin-project",
"dep:tokio",
"dep:sql-compilation-data",
"dep:sql-macros"]
postgres = ["sqlx/postgres","not_build"]
sqlite = ["sqlx/sqlite","not_build"]
build = ["dep:sql-build"]
