[package]
name = "easy-sql-compilation-data"
version = "1.0.0"
edition = "2024"

description = "Easy SQL support library"
readme = "README-CRATES-IO.md"

license = "Apache-2.0"
authors = ["LimitLost (JQ) <jq@limitlost.com>"]
documentation = "https://docs.rs/easy-sql"
homepage = "https://github.com/LimitLost/easy-sql"
repository = "https://github.com/LimitLost/easy-sql"

[dependencies]
easy-macros = { version = "1.1.1", features = [
    "full",
] }

ron = { version = "0.10.1"}
serde = { version = "*", features = ["derive"] }

uuid = {version = "1.16.0", features = ["v4" ]}

syn = { version = "2.0", features = ["full","extra-traits"]}
quote = { version = "1.0" }
proc-macro2 = { version = "1.0.100" }
anyhow = { version = "1" }

[features]
build=[]
check_duplicate_table_names = []
migrations = []
