[package]
name = "easy-sql-macros"
version = "1.1.2"
edition = "2024"

description = "Easy SQL support library"
readme = "README-CRATES-IO.md"

license = "Apache-2.0"
authors = ["LimitLost (JQ) <jq@limitlost.com>"]
documentation = "https://docs.rs/easy-sql"
homepage = "https://github.com/LimitLost/easy-sql"
repository = "https://github.com/LimitLost/easy-sql"

[lib]
proc-macro = true

[dependencies]
easy-macros = { version = "1.1.1", features = ["full"] }
convert_case = "0.8.0"
easy-sql-compilation-data = { version = "1.0.1" }

syn = { version = "2.0", features = ["full","extra-traits"] }
quote = { version = "1.0"}
proc-macro2 = { version = "1.0.100" }
anyhow = { version = "1" }
lazy_static = "1.5.0"

[build-dependencies]
easy-macros = { version = "1.1.1", features = ["build"] }

[dev-dependencies]
trybuild = "1"

[features]
default = []
use_output_columns = []
parse_debug = []
migrations = ["easy-sql-compilation-data/migrations"]
check_duplicate_table_names = ["easy-sql-compilation-data/check_duplicate_table_names"]