[package]
name = "sql-macros"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
easy-macros = { version="1.0.2", features = ["full"] }
convert_case = "0.8.0"
sql-compilation-data = { path = "../sql-compilation-data" }

syn = { version = "2.0", features = ["full","extra-traits"] }
quote = { version = "1.0"}
proc-macro2 = { version = "1.0.100" }
anyhow = { version = "1" }
lazy_static = "1.5.0"

[build-dependencies]
easy-macros = { version="1.0.2", features = ["build"] }

[features]
default = []
use_output_columns = []
parse_debug = []
migrations = ["sql-compilation-data/migrations"]
check_duplicate_table_names = ["sql-compilation-data/check_duplicate_table_names"]